@@ -75,9 +75,17 @@
 		<action important="yes">
 			<name>entry-add</name>
 			<label>_Add Entry...</label>
-			<stock>revelation-add</stock>
+			<stock>revelation-new-entry</stock>
 			<accel>&lt;Control&gt;Insert</accel>
 			<description>Create a new entry</description>
+		</action>
+
+		<action important="yes">
+			<name>entry-folder</name>
+			<label>Add _Folder...</label>
+			<stock>revelation-new-folder</stock>
+			<accel>&lt;Shift&gt;&lt;Control&gt;Insert</accel>
+			<description>Create a new folder</description>
 		</action>
 	</actiongroup>
 
