@@ -6,6 +6,7 @@
 		<menuitem action="entry-edit" />
 		<menuitem action="entry-remove" />
 		<menuitem action="entry-add" />
+		<menuitem action="entry-folder" />
 		<separator />
 		<menuitem action="clip-cut" />
 		<menuitem action="clip-copy" />
