@@ -2,11 +2,11 @@
 
 <ui>
 	<toolbar action="toolbar">
-		<toolitem action="file-new" />
 		<toolitem action="file-open" />
 		<toolitem action="file-save" />
 		<separator />
 		<toolitem action="entry-add" />
+		<toolitem action="entry-folder" />
 		<toolitem action="entry-edit" />
 		<toolitem action="entry-remove" />
 		<toolitem action="entry-goto" />
