@@ -2,6 +2,13 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.4 ]---------------
 
+2005-05-31  Erik Grinaker <erikg@codepoet.no>
+
+	* removed "New file" item from toolbar
+
+	* added new toolbar item "Add Folder", instead of creating
+	folders via "Add Entry"
+
 2005-04-06  Erik Grinaker <erikg@codepoet.no>
 
 	* don't crash on missing revelation logo icon
